src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --color-term-bg: rgb(254 252 232);
        --color-term-blue: rgb(29 78 216);
        --color-term-green: rgb(21 128 61);
        --color-term-normal: black;
    }

    @media (prefers-color-scheme: dark) {
        :root {
            --color-term-bg: rgb(41 41 41);
            --color-term-green: rgb(134 239 172);
            --color-term-blue: rgb(147 197 253);
            --color-term-normal: white;
        }
    }
}

/* button style */

button.btn-primary {
    @apply px-4 py-1 bg-yellow-700 text-white transition-colors;
}

button.btn-primary:hover {
    @apply bg-yellow-800;
}

button.btn-primary:active {
    @apply bg-yellow-900;
}

.less-app-content .hidden-in-less {
    display: none;
}

/* post styles */
.meta-list {
    @apply text-sm text-gray-500 my-2 grid;
    grid-template-columns: auto 1fr;
}

.meta-list dt {
    @apply font-bold mr-2;
    grid-column-start: 1;
}

.meta-list dt::after {
    content: ":";
}

.meta-list dd {
    grid-column-start: 2;
}

/* post list styles */
.posts-list thead::after {
    content: "";
    display: table-row;
    height: 1rem;
}

.posts-list tbody::before {
    content: "";
    display: table-row;
    height: 1rem;
    @apply border-t-2 border-term-normal border-dashed;
}

.posts-list th,
.posts-list td {
    vertical-align: top;
    text-align: left;
}

/* hide first col in mobile */
.posts-list td:first-child,
.posts-list th:first-child {
    @apply hidden sm:table-cell;
}

.posts-list a {
    @apply text-term-blue underline;
}

.posts-list .mobile-a {
    @apply sm:text-inherit sm:no-underline;
}

